CAUSEWAY-2297: apps work - some tests do not compile